--- a/.gitignore
+++ b/.gitignore
@@ -76,9 +76,9 @@ Temporary Items
 # .idea/compiler.xml
 # .idea/jarRepositories.xml
 # .idea/modules.xml
-# .idea/*.iml
+.idea/*.iml
 # .idea/modules
-# *.iml
+*.iml
 # *.ipr
 
 # CMake
