--- a/.gitignore
+++ b/.gitignore
@@ -122,6 +122,7 @@ fabric.properties
 # that are supposed to be shared within teams.
 
 .idea/*
+.idea/
 
 !.idea/codeStyles
 !.idea/runConfigurations
